[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "nvme driver"
edition = "2021"
keywords = ["os", "nvme", "block", "driver"]
license = "MIT"
name = "nvme-driver"
repository = "https://github.com/drivercraft/nvme"
version = "0.3.1"

[dependencies]
dma-api = {version = "0.3", features = ["alloc"]}
log = "0.4"
tock-registers = "0.9.0"

[dev-dependencies]
bare-test = "0.4"
byte-unit = {version = "5.1.6", default-features = false, features = ["byte"]}
pcie = "0.2"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
name = "test"
harness = false