[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "nvme driver"
edition = "2021"
keywords = ["os", "nvme", "block", "driver"]
license = "MIT"
name = "nvme-driver"
repository = "https://github.com/drivercraft/nvme"
version = "0.3.1"

[dependencies]
dma-api = {version = "0.5", features = ["alloc"]}
log = "0.4"
tock-registers = "0.10"

[dev-dependencies]
bare-test = "0.7"
byte-unit = {version = "5.1.6", default-features = false, features = ["byte"]}
pcie = "0.4"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
